--- a/My-Instagram/My-Instagram.html
+++ b/My-Instagram/My-Instagram.html
@@ -59,7 +59,7 @@ function showSlides() {
 <div id="wrapper">
   <div class="main-content">
     <div class="header">
-      <img src="https://i.imgur.com/zqpwkLQ.png">
+      <img src="insta.png">
     </div>
     <div class="l-part">
       <input type="text" placeholder="Phone number, username, or email" class="input-1" />
